# RobustDiLoCo

./: .gitignore  README.md  pretokenize_data.py  pyproject.toml  train.py
docs/superpowers/plans/: 2026-07-19-pseudograd-analysis.md
docs/superpowers/specs/: 2026-07-19-pseudograd-analysis-design.md
experiments/: analyse_pseudograds.py  analyze_sweep.py  plot_baseline.py  pretokenize.py  profile_throughput.py  run_baseline.py  run_experiment.py  sweep.py
experiments/results/: baseline-colab.json  baseline.json
experiments/results/tier1/: mean_pmagnitude_f2_s10.0_seed42.json  mean_pmagnitude_f2_s100.0_seed42.json  mean_pmagnitude_f2_s1000.0_seed42.json  mean_pnone_f0_s0.0_seed42.json  median_pmagnitude_f2_s10.0_seed42.json  median_pmagnitude_f2_s100.0_seed42.json  median_pmagnitude_f2_s1000.0_seed42.json  median_pnone_f0_s0.0_seed42.json  rfa_pmagnitude_f1_s10.0_seed42.json  rfa_pmagnitude_f1_s100.0_seed42.json  rfa_pmagnitude_f2_s10.0_seed42.json  rfa_pmagnitude_f2_s100.0_seed42.json  rfa_pmagnitude_f2_s1000.0_seed42.json  rfa_pmagnitude_f4_s10.0_seed42.json  rfa_pnone_f0_s0.0_seed42.json  trimmed_pmagnitude_f1_s10.0_seed42.json  (+6 more)
hparams/512M/: 512M_model_hparams.json
hparams/sim/: sim_model_hparams.json  sim_model_hparams_full.json  sim_model_hparams_gpt2_small.json  sim_model_hparams_nanogpt.json
simulation/: __init__.py  aggregators.py  analysis.py  data.py  evaluate.py  model.py  perturbations.py  workers.py
src/tplr/: __init__.py  data.py  sparseloco.py  strategies.py
tests/: test_aggregators.py  test_analysis.py  test_model.py  test_perturbations.py
(+5 files in other folders)
